...
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="download" translatesAutoresizingMaskIntoConstraints="NO" id="UZl-b0-a8N">
                                                <rect key="frame" x="3" y="3" width="359" height="125"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="125" id="EWh-g7-grL"/>
                                                </constraints>
                                            </imageView>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p2Y-F0-ASv">
                                                <rect key="frame" x="3" y="144" width="359" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="Kqe-qr-GWl"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hs1-la-8Kp" userLabel="Stud Last Name">
                                                <rect key="frame" x="3" y="179" width="359" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="yDT-3m-NwX"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KOF-Pm-4hh">
                                                <rect key="frame" x="3" y="214" width="359" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="6hC-AX-cYv"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="StudentID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0NK-Sl-Zyv">
                                                <rect key="frame" x="3" y="249" width="359" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="HfV-94-YZp"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Utw-Va-1V9">
                                                <rect key="frame" x="3" y="284" width="359" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="r5x-uw-cOJ"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                                <rect key="frame" x="3" y="319" width="359" height="30"/>
                                                <color key="backgroundColor" red="0.33333333329999998" green="0.90196078430000004" blue="0.75686274509999996" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="WCD-4s-WTV"/>
                                                </constraints>
                                                <color key="tintColor" red="0.17254901959999999" green="0.2274509804" blue="0.2784313725" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <state key="normal" title="Save"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="5"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
...
